--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -408,6 +408,7 @@
                                                 </variation>
                                                 <connections>
                                                     <action selector="customQuestionButtonPressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="9Zm-QF-6Eh"/>
+                                                    <segue destination="daK-C5-wmi" kind="show" identifier="FilterInputPageSegue" id="J40-Mu-xxa"/>
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ask Taylor: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjX-Q8-gEl">
@@ -585,6 +586,7 @@
         <image name="Top Line" width="375" height="1"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="28w-wD-wPr"/>
+        <segue reference="LKh-Ql-dNR"/>
+        <segue reference="J40-Mu-xxa"/>
     </inferredMetricsTieBreakers>
 </document>
