--- a/ChachaT/Onboarding.storyboard
+++ b/ChachaT/Onboarding.storyboard
@@ -291,68 +291,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="atd-Uw-KhB">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="QuestionOnboardingCell" rowHeight="88" id="H0X-2T-UDU" customClass="QuestionOnboardingTableViewCell" customModule="ChachaT" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="88"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H0X-2T-UDU" id="geP-us-dxi">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aCX-Vi-YIm" customClass="ResizableButton" customModule="ChachaT" customModuleProvider="target">
-                                                    <rect key="frame" x="10" y="10" width="355" height="68"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTT-ry-ZgB">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="atd-Uw-KhB">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="QuestionOnboardingCell" rowHeight="88" id="H0X-2T-UDU" customClass="QuestionOnboardingTableViewCell" customModule="ChachaT" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="92" width="375" height="88"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="H0X-2T-UDU" id="geP-us-dxi">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aCX-Vi-YIm" customClass="ResizableButton" customModule="ChachaT" customModuleProvider="target">
+                                                            <rect key="frame" x="10" y="10" width="355" height="68"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="VdX-Q1-AD7"/>
+                                                            </constraints>
+                                                            <state key="normal" title="What is your dream job?" backgroundImage="Question Bubble">
+                                                                <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="questionButtonPressed:" destination="H0X-2T-UDU" eventType="touchUpInside" id="PEw-7O-aiN"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="VdX-Q1-AD7"/>
+                                                        <constraint firstAttribute="trailing" secondItem="aCX-Vi-YIm" secondAttribute="trailing" constant="10" id="3gZ-5x-LSb"/>
+                                                        <constraint firstItem="aCX-Vi-YIm" firstAttribute="leading" secondItem="geP-us-dxi" secondAttribute="leading" constant="10" id="HXb-SF-in5"/>
+                                                        <constraint firstItem="aCX-Vi-YIm" firstAttribute="centerX" secondItem="geP-us-dxi" secondAttribute="centerX" id="MKS-sn-xLO"/>
+                                                        <constraint firstItem="aCX-Vi-YIm" firstAttribute="centerY" secondItem="geP-us-dxi" secondAttribute="centerY" id="Nu8-6D-8jF"/>
+                                                        <constraint firstAttribute="bottom" secondItem="aCX-Vi-YIm" secondAttribute="bottom" constant="9.5" id="dhh-j5-olX"/>
                                                     </constraints>
-                                                    <state key="normal" title="What is your dream job?" backgroundImage="Question Bubble">
-                                                        <color key="titleColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="questionButtonPressed:" destination="H0X-2T-UDU" eventType="touchUpInside" id="PEw-7O-aiN"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="aCX-Vi-YIm" secondAttribute="trailing" constant="10" id="3gZ-5x-LSb"/>
-                                                <constraint firstItem="aCX-Vi-YIm" firstAttribute="leading" secondItem="geP-us-dxi" secondAttribute="leading" constant="10" id="HXb-SF-in5"/>
-                                                <constraint firstItem="aCX-Vi-YIm" firstAttribute="centerX" secondItem="geP-us-dxi" secondAttribute="centerX" id="MKS-sn-xLO"/>
-                                                <constraint firstItem="aCX-Vi-YIm" firstAttribute="centerY" secondItem="geP-us-dxi" secondAttribute="centerY" id="Nu8-6D-8jF"/>
-                                                <constraint firstAttribute="bottom" secondItem="aCX-Vi-YIm" secondAttribute="bottom" constant="9.5" id="dhh-j5-olX"/>
-                                            </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="MKS-sn-xLO"/>
-                                                </mask>
-                                            </variation>
-                                        </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="aCX-Vi-YIm" secondAttribute="bottom" constant="10" id="gQq-MT-dTW"/>
-                                        </constraints>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="gQq-MT-dTW"/>
-                                            </mask>
-                                        </variation>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="MKS-sn-xLO"/>
+                                                        </mask>
+                                                    </variation>
+                                                </tableViewCellContentView>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="aCX-Vi-YIm" secondAttribute="bottom" constant="10" id="gQq-MT-dTW"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="gQq-MT-dTW"/>
+                                                    </mask>
+                                                </variation>
+                                                <connections>
+                                                    <outlet property="theQuestionButton" destination="aCX-Vi-YIm" id="OVw-F6-UXL"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
                                         <connections>
-                                            <outlet property="theQuestionButton" destination="aCX-Vi-YIm" id="OVw-F6-UXL"/>
+                                            <outlet property="dataSource" destination="WOQ-Ef-PR1" id="X3W-hd-1S3"/>
+                                            <outlet property="delegate" destination="WOQ-Ef-PR1" id="hlN-8f-PIo"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="WOQ-Ef-PR1" id="X3W-hd-1S3"/>
-                                    <outlet property="delegate" destination="WOQ-Ef-PR1" id="hlN-8f-PIo"/>
-                                </connections>
-                            </tableView>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="atd-Uw-KhB" firstAttribute="top" secondItem="oTT-ry-ZgB" secondAttribute="top" id="0Lm-1X-OSG"/>
+                                    <constraint firstAttribute="bottom" secondItem="atd-Uw-KhB" secondAttribute="bottom" id="Coc-Qk-A0t"/>
+                                    <constraint firstAttribute="trailing" secondItem="atd-Uw-KhB" secondAttribute="trailing" id="Hfz-fP-6Zc"/>
+                                    <constraint firstItem="atd-Uw-KhB" firstAttribute="leading" secondItem="oTT-ry-ZgB" secondAttribute="leading" id="c3H-pY-lEu"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="atd-Uw-KhB" secondAttribute="trailing" id="2eX-Po-vRp"/>
-                            <constraint firstItem="atd-Uw-KhB" firstAttribute="top" secondItem="vpO-HF-dKT" secondAttribute="bottom" id="Iuy-s2-sWI"/>
-                            <constraint firstItem="atd-Uw-KhB" firstAttribute="leading" secondItem="4uo-Ls-LMX" secondAttribute="leading" id="nPc-dl-O49"/>
-                            <constraint firstItem="sSI-Af-c6N" firstAttribute="top" secondItem="atd-Uw-KhB" secondAttribute="bottom" id="zxk-5v-kVg"/>
+                            <constraint firstAttribute="bottom" secondItem="oTT-ry-ZgB" secondAttribute="bottom" id="AEy-nx-YKW"/>
+                            <constraint firstItem="oTT-ry-ZgB" firstAttribute="leading" secondItem="4uo-Ls-LMX" secondAttribute="leading" id="BEk-xY-E9c"/>
+                            <constraint firstItem="oTT-ry-ZgB" firstAttribute="top" secondItem="4uo-Ls-LMX" secondAttribute="top" id="C8F-nx-Nt8"/>
+                            <constraint firstAttribute="trailing" secondItem="oTT-ry-ZgB" secondAttribute="trailing" id="DkK-iE-Cp7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Answer Three Questions" id="3Qm-hf-fns"/>
