--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -586,7 +586,7 @@
         <image name="Top Line" width="375" height="1"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="28w-wD-wPr"/>
-        <segue reference="pbG-G9-gXM"/>
+        <segue reference="J40-Mu-xxa"/>
+        <segue reference="LKh-Ql-dNR"/>
     </inferredMetricsTieBreakers>
 </document>
